# Externa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ResizeAndCentreWindowToggle.h  background_data.h  eyeframe.cpp  eyeframe.h  eyezoom.cpp  eyezoom.h  fileread.h  imguitheming.h  main.cpp  pleasework.h  resizeing.h  settings.json  uishit.h  winfind.h
